<resources>
    <string name="app_name">Psyness</string>
    <string name="nombre_login_hint">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="edad_hint">Edad</string>
    <string name="continuar">Siguiente</string>
    <string name="descrcontra">Ingresa tu correo y una contraseña segura,puede tener numeros y letras. \nRecuerda, tiene que ser dificil de adivinar.</string>
    <string name="correo">Correo electronico</string>
    <string name="title_activity_feed">feed</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Presentacion_proyecto">Una Red Social Orientada\nA La Salud Mental</string>
    <string name="descripcion_proyecto">Buscamos mejorar la salud mental de nuestros usuarios mediante la psicoterapia, la terapia cognitivo conductual y el uso de la tecnología.</string>
    <string name="etiquetas_titulo">Antes de iniciar</string>
    <string name="etiquetas_descripcion">Cuales categorias te llaman mas la atencion.</string>
    <string name="etiqueta_1">Autoestima y confianza</string>
    <string name="etiqueta_2">Relaciones interpersonales</string>
    <string name="etiqueta_3">Ansiedad y estres</string>
    <string name="etiqueta_4">Depresion</string>
    <string name="etiqueta_5">Resolucion de conflictos</string>
    <string name="etiqueta_6">Mindfulness y bienestar</string>
    <string name="etiqueta_7">Crecimiento personal</string>
    <string name="etiqueta_8">Salud emocional</string>
    <string name="etiqueta_9">Transtornos</string>
    <string name="etiqueta_10">Recaidas</string>
    <string name="etiqueta_11">Problemas de sueño</string>
    <string name="etiqueta_12">Crecimiento personal</string>
    <string name="check_box">Contenido sensible</string>
    <string name="omitir">Omitir</string>
    <string name="algoquecompartir">¿Tienes algo que compartir?</string>
    <string name="descripcion">Esta es mi descripcion</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>