<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".etiquetaselegir">


    <TextView
        android:layout_width="99dp"
        android:layout_height="45dp"
        android:fontFamily="@font/nunito_medium"
        android:text="@string/etiqueta_1"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.214"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.155"></TextView>

    <TextView
        android:layout_width="109dp"
        android:layout_height="44dp"
        android:fontFamily="@font/nunito_medium"
        android:text="@string/etiqueta_2"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.877"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.156"></TextView>

    <com.google.android.material.slider.Slider
        android:id="@+id/slider2"
        android:layout_width="193dp"
        android:layout_height="51dp"
        android:stepSize="1"
        android:valueFrom="0"
        android:valueTo="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.958"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.205" />

    <com.google.android.material.slider.Slider
        android:id="@+id/slider4"
        android:layout_width="193dp"
        android:layout_height="51dp"
        android:stepSize="1"
        android:valueFrom="0"
        android:valueTo="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.958"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.332" />

    <TextView
        android:layout_width="143dp"
        android:layout_height="26dp"
        android:fontFamily="@font/nunito_medium"
        android:text="@string/etiqueta_11"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.741"></TextView>

    <com.google.android.material.slider.Slider
        android:id="@+id/slider5"
        android:layout_width="193dp"
        android:layout_height="51dp"
        android:stepSize="1"
        android:valueFrom="0"
        android:valueTo="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.958"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.459" />

    <TextView
        android:layout_width="110dp"
        android:layout_height="44dp"
        android:fontFamily="@font/nunito_medium"
        android:text="@string/etiqueta_6"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.834"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.402"></TextView>

    <com.google.android.material.slider.Slider
        android:id="@+id/slider8"
        android:layout_width="193dp"
        android:layout_height="51dp"
        android:stepSize="1"
        android:valueFrom="0"
        android:valueTo="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.958"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.58" />

    <com.google.android.material.slider.Slider
        android:id="@+id/slider1"
        android:layout_width="193dp"
        android:layout_height="51dp"
        android:stepSize="1"
        android:valueFrom="0"
        android:valueTo="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.205"
        app:circularflow_radiusInDP="@string/etiquetas_titulo"/>

    <TextView
        android:layout_width="87dp"
        android:layout_height="26dp"
        android:fontFamily="@font/nunito_medium"
        android:text="@string/etiqueta_9"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.206"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.634"></TextView>

    <com.google.android.material.slider.Slider
        android:id="@+id/slider9"
        android:layout_width="193dp"
        android:layout_height="51dp"
        android:stepSize="1"
        android:valueFrom="0"
        android:valueTo="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.684" />

    <com.google.android.material.slider.Slider
        android:id="@+id/slider3"
        android:layout_width="193dp"
        android:layout_height="51dp"
        android:stepSize="1"
        android:valueFrom="0"
        android:valueTo="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:fontFamily="@font/nunito_medium"
        android:text="@string/etiqueta_7"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.203"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.535"></TextView>

    <com.google.android.material.slider.Slider
        android:id="@+id/slider10"
        android:layout_width="193dp"
        android:layout_height="51dp"
        android:stepSize="1"
        android:valueFrom="0"
        android:valueTo="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.958"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.684" />

    <TextView
        android:layout_width="79dp"
        android:layout_height="24dp"
        android:fontFamily="@font/nunito_medium"
        android:text="@string/etiqueta_4"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.819"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.293"></TextView>

    <TextView
        android:layout_width="71dp"
        android:layout_height="21dp"
        android:fontFamily="@font/nunito_medium"
        android:text="@string/etiqueta_10"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.637"></TextView>

    <com.google.android.material.slider.Slider
        android:id="@+id/slider7"
        android:layout_width="193dp"
        android:layout_height="51dp"
        android:stepSize="1"
        android:valueFrom="0"
        android:valueTo="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.58" />

    <com.google.android.material.slider.Slider
        android:id="@+id/slider6"
        android:layout_width="193dp"
        android:layout_height="51dp"
        android:stepSize="1"
        android:valueFrom="0"
        android:valueTo="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.459" />

    <TextView
        android:layout_width="129dp"
        android:layout_height="23dp"
        android:fontFamily="@font/nunito_medium"
        android:text="@string/etiqueta_3"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.295"></TextView>

    <TextView
        android:layout_width="123dp"
        android:layout_height="20dp"
        android:fontFamily="@font/nunito_medium"
        android:text="@string/etiqueta_8"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.899"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.536"></TextView>

    <com.google.android.material.slider.Slider
        android:id="@+id/slider11"
        android:layout_width="193dp"
        android:layout_height="51dp"
        android:stepSize="1"
        android:valueFrom="0"
        android:valueTo="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.793" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="42dp"
        android:fontFamily="@font/nunito_medium"
        android:text="@string/etiqueta_5"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.402"></TextView>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="356dp"
        android:layout_height="29dp"
        android:fontFamily="@font/nutito_black"
        android:text="@string/etiquetas_descripcion"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.29"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084"></TextView>

    <TextView
        android:layout_width="215dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/nutito_black"
        android:text="@string/etiquetas_titulo"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchcontnid"
        android:layout_width="150dp"
        android:layout_height="60dp"
        app:thumbTint="@color/selector_track_color"
        app:trackTint="@color/apagado"
        android:text="@string/check_box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.875" />

    <Button
        android:id="@+id/btnetiquetasconfirmar"
        android:layout_width="211dp"
        android:layout_height="53dp"
        android:text="Siguiente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.952"
        android:fontFamily="@font/nutito_black"
        android:backgroundTint="@color/morado"/>

</androidx.constraintlayout.widget.ConstraintLayout>