<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".correoycontra">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="266dp"
            android:layout_height="39dp"
            android:fontFamily="@font/nutito_black"
            android:text="Configura tu perfil"
            android:textSize="26sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.151"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.02" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="356dp"
            android:layout_height="76dp"
            android:fontFamily="@font/nutito_black"
            android:text="@string/descrcontra"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.309"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.083" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="369dp"
            android:layout_height="84dp"
            android:hint="@string/correo"
            android:paddingTop="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.404"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:layout_constraintVertical_bias="0.03">

            <EditText
                android:id="@+id/edtxtcorreo"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.403"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                app:layout_constraintVertical_bias="0.054" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            android:layout_width="369dp"
            android:layout_height="84dp"
            android:fontFamily="@font/nunito_medium"
            android:hint="@string/password"
            android:paddingTop="15dp"
            app:endIconMode="password_toggle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.38"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:layout_constraintVertical_bias="0.0">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="55dp"

                android:autofillHints="password"
                android:fontFamily="@font/nunito_medium"
                android:inputType="textPassword"
                android:paddingStart="14dp"
                android:paddingTop="8dp"
                android:paddingEnd="14dp"
                android:paddingBottom="8dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnconfirmar"
            android:layout_width="326dp"
            android:layout_height="60dp"
            android:layout_marginBottom="176dp"
            android:backgroundTint="@color/morado"
            android:fontFamily="@font/nutito_black"
            android:text="Siguiente"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
            app:layout_constraintVertical_bias="0.086" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>